HTML first draft done and images added

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
@@ -14,6 +14,83 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="main-container container">
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <section class="top-content">
+      <img src="img/hacker.jpeg">
+
+      <h1>Ken Ridenour - Web Dev</h1>
+      <h3>I love to code!</h3>
+
+      <p>Always looking for side projects! Let me know if you would like to sign up on this website.</p>
+
+      <button>Work Together</button>
+    </section>
+
+    <section class="bottom-content">
+      <div class="listen-up">
+        <h2>Listen Up...</h2>
+        
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum perspiciatis reprehenderit pariatur nam veritatis doloribus consequatur? Dolores, in natus hic enim esse, earum quo, vero ex a at debitis! Neque?</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quasi ipsa facilis voluptate sunt ex at laboriosam, atque incidunt praesentium quibusdam necessitatibus corrupti laudantium pariatur illo expedita maxime officiis quidem.</p>
+      </div>
+
+      <div class="stuff-good-at">
+        <h2>Stuff I'm Good At:</h2>
+        <ul>
+          <li>Web Development</li>
+          <li>Video Games</li>
+          <li>Reading</li>
+          <li>Animal Care</li>
+          <li>Naps</li>
+        </ul>
+      </div>
+
+      <div class="work-history">
+        <h2>Work History</h2>
+        <div class="work years">
+          <h4>Yrs</h4>
+          <h4>1</h4>
+          <h4>2</h4>
+          <h4>3</h4>
+        </div>
+        
+        <div class="work company">
+          <h4>Company</h4>
+          <p>Google</p>
+          <p>Amazon</p>
+          <p>Facebook</p>
+        </div>
+
+        <div class="work title">
+          <h4>Title</h4>
+          <p>CEO</p>
+          <p>CFO</p>
+          <p>CMO</p>
+        </div>
+
+        <div class="work tech-used">
+          <h4>Tech Used</h4>
+          <p>Python</p>
+          <p>Javascript</p>
+          <p>C++</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <p>Copyright Great 2018</p>
+    </footer>
+
+  </div>
 </body>
 </html>
