Header and Top content done

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <section class="top-content">
-      <img src="img/hacker.jpeg">
+      <img class="my-img" src="img/hacker.jpeg">
 
       <h1>Ken Ridenour - Web Dev</h1>
       <h3>I love to code!</h3>
@@ -46,13 +46,15 @@
 
       <div class="stuff-good-at">
         <h2>Stuff I'm Good At:</h2>
-        <ul>
-          <li>Web Development</li>
-          <li>Video Games</li>
-          <li>Reading</li>
-          <li>Animal Care</li>
-          <li>Naps</li>
-        </ul>
+        <div class="stuff-list">
+          <ul>
+            <li>Web Development</li>
+            <li>Video Games</li>
+            <li>Reading</li>
+            <li>Animal Care</li>
+            <li>Naps</li>
+          </ul>
+        </div>
       </div>
 
       <div class="work-history">
