--- a/index.html
+++ b/index.html
@@ -59,32 +59,34 @@
 
       <div class="work-history">
         <h2>Work History</h2>
-        <div class="work years">
-          <h4>Yrs</h4>
-          <h4>1</h4>
-          <h4>2</h4>
-          <h4>3</h4>
-        </div>
-        
-        <div class="work company">
-          <h4>Company</h4>
-          <p>Google</p>
-          <p>Amazon</p>
-          <p>Facebook</p>
-        </div>
+        <div class="work-table">
+          <div class="work years">
+            <h4>Yrs</h4>
+            <h5>1</h5>
+            <h5>2</h5>
+            <h5>3</h5>
+          </div>
+          
+          <div class="work company">
+            <h4>Company</h4>
+            <p>Google</p>
+            <p>Amazon</p>
+            <p>Facebook</p>
+          </div>
 
-        <div class="work title">
-          <h4>Title</h4>
-          <p>CEO</p>
-          <p>CFO</p>
-          <p>CMO</p>
-        </div>
+          <div class="work title">
+            <h4>Title</h4>
+            <p>CEO</p>
+            <p>CFO</p>
+            <p>CMO</p>
+          </div>
 
-        <div class="work tech-used">
-          <h4>Tech Used</h4>
-          <p>Python</p>
-          <p>Javascript</p>
-          <p>C++</p>
+          <div class="work tech-used">
+            <h4>Tech Used</h4>
+            <p>Python</p>
+            <p>Javascript</p>
+            <p>C++</p>
+          </div>
         </div>
       </div>
     </section>
