Complete mobile MVP

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </section>
 
     <section class="bottom-content">
-      <div class="listen-up">
+      <div class="listen-up bc">
         <h2>Listen Up...</h2>
         
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum perspiciatis reprehenderit pariatur nam veritatis doloribus consequatur? Dolores, in natus hic enim esse, earum quo, vero ex a at debitis! Neque?</p>
@@ -44,7 +44,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus quasi ipsa facilis voluptate sunt ex at laboriosam, atque incidunt praesentium quibusdam necessitatibus corrupti laudantium pariatur illo expedita maxime officiis quidem.</p>
       </div>
 
-      <div class="stuff-good-at">
+      <div class="stuff-good-at bc">
         <h2>Stuff I'm Good At:</h2>
         <div class="stuff-list">
           <ul>
@@ -57,7 +57,7 @@
         </div>
       </div>
 
-      <div class="work-history">
+      <div class="work-history bc">
         <h2>Work History</h2>
         <div class="work-table">
           <div class="work years">
